// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-6 {
  font-size: 14px;
  margin-bottom: 24px;
}

.emotion-6 * {
  color: #5D6C74;
}

.emotion-6 > p {
  margin-top: 0;
  min-height: 24px;
}

.emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

.emotion-2 {
  cursor: default;
}

.emotion-2:last-of-type {
  color: #21313C;
}

<nav
    class="emotion-6 emotion-7"
  >
    <p>
      <a
        class="emotion-0 emotion-1"
        href="https://docs.mongodb.com"
      >
        Docs Home
      </a>
      <span
        class="emotion-2 emotion-3"
      >
         → 
      </span>
      <a
        class="emotion-0 emotion-1"
        href="/view-analyze/"
      >
        View & Analyze Data
      </a>
    </p>
  </nav>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-6 {
  font-size: 14px;
  margin-bottom: 24px;
}

.emotion-6 * {
  color: #5D6C74;
}

.emotion-6 > p {
  margin-top: 0;
  min-height: 24px;
}

.emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

.emotion-2 {
  cursor: default;
}

.emotion-2:last-of-type {
  color: #21313C;
}

<nav
    class="emotion-6 emotion-7"
  >
    <p>
      <a
        class="emotion-0 emotion-1"
        href="https://docs.mongodb.com"
      >
        Docs Home
      </a>
      <span
        class="emotion-2 emotion-3"
      >
         → 
      </span>
      <a
        class="emotion-0 emotion-1"
        href="/"
      >
        MongoDB Compass
      </a>
    </p>
  </nav>
</DocumentFragment>
`;
